# Monorepo-X-Bazel

./: .gitignore  Bazel-Commands.txt  Bazel-Notes.txt  JenkinsFile.CI  Jenkinsfile  README.md  WORKSPACE.bazel  bazel-Monorepo-X-Bazel  bazel-bin  bazel-out  bazel-testlogs  deps.bzl
Core-Services/: k3d-kubeconfig  start-core-services.sh  stop-core-services.sh
Core-Services/Jenkins/: Jenkins-Dockerfile  kube-config
Core-Services/Jenkins/JenkinsSharedLibrary/resources/: buildAndCompile.sh  buildContainerImage.sh  helmDryRun.sh  helmWetRun.sh  lint.sh  publishContainerImage.sh  runTestSuite.sh  runUnitTests.sh  sonarScanner.sh  teardownNamespace.sh
Core-Services/Jenkins/JenkinsSharedLibrary/vars/: continuousDelivery.groovy  continuousIntegrationMain.groovy  continuousIntegrationPR.groovy
Core-Services/Jenkins/docs/: Jenkins-Pipeline-Setup.txt  jenkins-on-docker.txt  jenkins-required-creds.txt  jenkins-required-plugins.txt  jenkins-shared-librabry-setup.txt
Core-Services/Sonarqube/docs/: sonarqube-on-docker.txt
Microservices/Podinfo-Frontend-App/helm-chart/namespaces/prod/: values.yaml
Microservices/Podinfo-Frontend-App/helm-chart/templates/: ingress.yaml
Microservices/Podinfo-Frontend-App/src/: sonar-project.properties
Microservices/PodinfoFrontendApp/jenkinsfiles/post-merge/: Jenkinsfile.groovy
Microservices/PodinfoFrontendApp/jenkinsfiles/pre-merge/: Jenkinsfile.groovy
Microservices/PodinfoFrontendApp/src/: BUILD.bazel  go.mod
Microservices/PodinfoFrontendApp/src/cmd/podcli/: BUILD.bazel
Microservices/PodinfoFrontendApp/src/cmd/podinfo/: BUILD.bazel
Microservices/PodinfoFrontendApp/src/pkg/api/: BUILD.bazel
Microservices/PodinfoFrontendApp/src/pkg/api/docs/: BUILD.bazel
Microservices/PodinfoFrontendApp/src/pkg/fscache/: BUILD.bazel
Microservices/PodinfoFrontendApp/src/pkg/grpc/: BUILD.bazel
Microservices/PodinfoFrontendApp/src/pkg/signals/: BUILD.bazel
Microservices/PodinfoFrontendApp/src/pkg/version/: BUILD.bazel
Microservices/PodinfoFrontendApp/src/ui/: BUILD.bazel
Microservices/PythonApp/helm-chart/templates/: NOTES.txt  deployment.yaml  namespace.yaml
Microservices/PythonApp/jenkinsfiles/pre-merge/: Jenkinsfile.groovy
Microservices/PythonApp/src/: Dockerfile  sonar-project.properties
Microservices/PythonApp/src/app/: BUILD.bazel  app.py
Microservices/PythonApp/src/tests/: BUILD.bazel  test_app.py
Microservices/TEST/src/tests/: BUILD.bazel  Calculator_test.py
Microservices/TEST/src/tools/: BUILD.bazel  Calculator.py
Microservices/TEST/src/web/: BUILD.bazel  Web.py
