load("@pip//:requirements.bzl", "requirement")

py_library(
    name = "test_py_web_library",
    srcs = ["Web.py"],
    deps = [
        requirement("Flask"),
        "//Microservices/TEST/src/tools:test_py_tools_library",
    ],
    visibility = ["//visibility:public"]
)

py_binary(
    name = "test_py_web_binary",
    srcs = ["Web.py"],
    main = "Web.py",
    deps = [":test_py_web_library"],
)