load("@pip//:requirements.bzl", "requirement")

py_library(
    name = "test_py_web_library",
    srcs = ["Web.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("Flask"),
        "//Microservices/TEST/src/tools:test_py_tools_library",
    ],
)

py_binary(
    name = "test_py_web_binary",
    srcs = ["Web.py"],
    main = "Web.py",
    deps = [":test_py_web_library"],
)
