load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "podcli_lib",
    srcs = [
        "check.go",
        "main.go",
        "version.go",
        "ws.go",
    ],
    importpath = "github.com/stefanprodan/podinfo/cmd/podcli",
    visibility = ["//visibility:private"],
    deps = [
        "//Microservices/PodinfoFrontendApp/src/pkg/version",
        "@com_github_chzyer_readline//:go_default_library",
        "@com_github_fatih_color//:go_default_library",
        "@com_github_gorilla_websocket//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//health/grpc_health_v1:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_binary(
    name = "podcli",
    embed = [":podcli_lib"],
    visibility = ["//visibility:public"],
)
