load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api",
    srcs = [
        "cache.go",
        "chunked.go",
        "configs.go",
        "delay.go",
        "echo.go",
        "echows.go",
        "env.go",
        "headers.go",
        "health.go",
        "http.go",
        "index.go",
        "info.go",
        "logging.go",
        "metrics.go",
        "mock.go",
        "panic.go",
        "server.go",
        "status.go",
        "store.go",
        "token.go",
        "tracer.go",
        "version.go",
    ],
    importpath = "github.com/stefanprodan/podinfo/pkg/api",
    visibility = ["//visibility:public"],
    deps = [
        "//Microservices/PodinfoFrontendApp/src/pkg/api/docs",
        "//Microservices/PodinfoFrontendApp/src/pkg/fscache",
        "//Microservices/PodinfoFrontendApp/src/pkg/version",
        "@com_github_golang_jwt_jwt_v4//:go_default_library",
        "@com_github_gomodule_redigo//redis:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
        "@com_github_gorilla_websocket//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@com_github_swaggo_http_swagger//:go_default_library",
        "@com_github_swaggo_swag//:go_default_library",
        "@io_opentelemetry_go_contrib_instrumentation_github_com_gorilla_mux_otelmux//:go_default_library",
        "@io_opentelemetry_go_contrib_instrumentation_net_http_httptrace_otelhttptrace//:go_default_library",
        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:go_default_library",
        "@io_opentelemetry_go_contrib_propagators_aws//xray:go_default_library",
        "@io_opentelemetry_go_contrib_propagators_b3//:go_default_library",
        "@io_opentelemetry_go_contrib_propagators_jaeger//:go_default_library",
        "@io_opentelemetry_go_contrib_propagators_ot//:go_default_library",
        "@io_opentelemetry_go_otel//:go_default_library",
        "@io_opentelemetry_go_otel//codes:go_default_library",
        "@io_opentelemetry_go_otel//propagation:go_default_library",
        "@io_opentelemetry_go_otel//semconv/v1.7.0:go_default_library",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace//:go_default_library",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc//:go_default_library",
        "@io_opentelemetry_go_otel_sdk//resource:go_default_library",
        "@io_opentelemetry_go_otel_sdk//trace:go_default_library",
        "@io_opentelemetry_go_otel_trace//:go_default_library",
        "@org_golang_x_net//http2:go_default_library",
        "@org_golang_x_net//http2/h2c:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "api_test",
    srcs = [
        "chunked_test.go",
        "delay_test.go",
        "echo_test.go",
        "env_test.go",
        "headers_test.go",
        "health_test.go",
        "info_test.go",
        "status_test.go",
        "token_test.go",
        "version_test.go",
    ],
    embed = [":api"],
)
