load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "signals",
    srcs = [
        "shutdown.go",
        "signal.go",
        "signal_posix.go",
        "signal_windows.go",
    ],
    importpath = "github.com/stefanprodan/podinfo/pkg/signals",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gomodule_redigo//redis:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@io_opentelemetry_go_otel_sdk//trace:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
